Add the new theme

--- a/css/main.css
+++ b/css/main.css
@@ -1,318 +1,265 @@
 @import url('https://fonts.googleapis.com/css?family=Actor|PT+Mono|Philosopher');
+@import url('https://fontlibrary.org/face/cave-story');
+@import url('https://fontlibrary.org/face/mr-pixel');
 
 * {
-	color: white;
 	padding: 0;
 	margin: 0;
-	--header-height: 2em;
-	font-family: 'Philosopher', sans-serif;
+	text-align: left;
+	vertical-align: center;
+	font-family: 'VTFMisterPixelRegular', sans-serif;
 }
 
 html {
-	background-color: #202225;
+	padding: 0;
+	margin: 0;
+	--color-dark: #331e50;
+	--color-med-hi: #d68e49;
+	--color-med-low: #a63725;
+	--color-light: #f7e7c6;
 }
 
 body {
-	background-color: #2F3136;
-	width: 80%;
-	margin: 0 auto;
-	box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
+	background-color: var(--color-light);
+	color: var(--color-med-low);
+	padding: 0;
+	margin: 0;
 }
 
-/*
-* Blanket element setup
-*/
+body.default {
+	--color-dark: #331e50;
+	--color-med-hi: #d68e49;
+	--color-med-low: #a63725;
+	--color-light: #f7e7c6;
+}
+
+body.zelda {
+	--color-dark: #5a3921;
+	--color-med-hi: #7bc67b;
+	--color-med-low: #6b8c42;
+	--color-light: #ffffb5;
+}
+
+body.green {
+	--color-dark: #2e463d;
+	--color-med-hi: #577b46;
+	--color-med-low: #385d49;
+	--color-light: #7e8416;
+}
+
+body.pokemon {
+	--color-dark: #181010;
+	--color-med-hi: #f7b58c;
+	--color-med-low: #84739c;
+	--color-light: #ffefff;
+}
+
+body.pocket {
+	--color-dark: #2b2b26;
+	--color-med-hi: #a89f94;
+	--color-med-low: #706b66;
+	--color-light: #e0dbcd;
+}
+
+body.megaman {
+	--color-dark: #102533;
+	--color-med-hi: #6f9edf;
+	--color-med-low: #42678e;
+	--color-light: #cecece;
+}
+
+body.metroid {
+	--color-dark: #2c1700;
+	--color-med-low: #b62558;
+	--color-med-hi: #047e60;
+	--color-light: #aedf1e;
+}
+
+body.kirby {
+	--color-dark: #2c2c96;
+	--color-med-hi: #e78686;
+	--color-med-low: #7733e7;
+	--color-light: #f7bef7;
+}
+
+body.icarus {
+	--color-dark: #1e0000;
+	--color-med-hi: #f78e50;
+	--color-med-low: #9e0000;
+	--color-light: #cef7f7;
+}
+
+body.mario {
+	--color-med-low: #000000;
+	--color-med-hi: #11c600;
+	--color-dark: #dfa677;
+	--color-light: #eff7b6;
+}
 
 a {
-	color: #FFC8FF;
-	border-width: 2px 0;
 	text-decoration: none;
+	color: var(--color-low);
 }
 
 a::before {
-	content: "[";
+	content: "< ";
 }
 
 a::after {
-	content: "]";
+	content: " />";
 }
 
+.sitetitle, .sitetagline, .pagetitle, .pagesubtitle, 
+.postdate, .postpreview .posttitle, .postpreview .byline, 
+.postpreview .date  {
+	background-color: var(--color-med-hi);
+	color: var(--color-light);
+	border: 3px double var(--color-med-low);
+	text-shadow: 2px 2px 0px var(--color-med-low)!important;
+	letter-spacing: 1px;
 
-/*
-* Header Section setup
-*/
-
-#header {
-	display: block;
-	background-color: #202225;
-	box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
-	/*height: calc(var(--header-height) * 2.1);*/
 
 }
 
-#header * {
-	display: inline-block;
-}
-
-#header .rootlink {
-	display: block;
-	color: inherit;
-	margin-bottom: 6px;
-}
-
-#header .rootlink::before {
-	content: none;
-}
-
-#header .rootlink::after {
-	content: none;
-}
-
-#header .rootlink * {
-	display: block;
-	padding-left: 3px;
-}
-
-#header .rootlink .sitetitle {
-	font-size: var(--header-height);
-	margin-right: calc(var(--header-height) / 3);
-	padding-left: 3px;
-}
-
-#header .rootlink .sitetagline {
-	font-style: italic;
-	font-weight: lightest;
-}
-
-#header .navbar {
-	top: 0;
-	overflow-y: scroll;
-	overflow-x: hidden;
-	position: relative;
-	right: 0;
-	margin-left: 0;
-	display: block;
-	height: calc(var(--header-height) * 1.3);
-	float: none;
-}
-
-#header .navbar ul {
-	width: 100%;
-}
-
-#header .navbar li {
-	display: inline-block;
-	background: #4A4C52;
-	border-bottom: solid calc(var(--header-height) * 0.1) purple;
-	padding: 0 6px;
-	margin-left: 4px;
-	width: calc(20% - 4px - 6px);
-	height: calc(var(--header-height) * 1);
-	overflow: hidden;
-	text-overflow: ellipsis;
-}
-
-#header .navbar li a {
-	height: var(--header-height);
-	vertical-align: -0.8em;
-	color: white;
-	border: none;
-	width: 100%;
-	margin-top: 0.6em;
-	text-overflow: ellipsis;
-	overflow: hidden;
-	white-space: nowrap;
+.sitetitle {
+	border-bottom: none;
 	text-align: center;
+	padding: 4px 0;
+}
+
+.sitetagline {
+	border-top: none;
+	text-align: center;
+	padding-bottom: 4px;
 }
 
 
-@media(min-width: 700px) {
-	#header .navbar {
-		margin-left: var(--header-height);
-		position: absolute;
-		right: 10%;
-		float: right;
-		display: inline-auto;
-
-	}
-
-	#header .navbar ul li {
-		display: inline-block;
-		width: auto;
-	}
-}
-
-@media(min-width: 900px) {
-	#header .rootlink * {
-		display: inline;
-	}
-
-	#header .rootlink .sitetagline {
-		margin-left: 0;
-		padding-left: 0;
-	}
-
-	#header .rootlink .sitetitle {
-		padding-right: 0;
-		margin-right: 6px;
-	}
-}
-
-
-/*
-* Main Page Setup
-*/
-
-#pagemain {
-	padding: 0 3px;
-}
-
-#pagemain .pagetitle {
-	padding: 11px;
-	padding-right: 6px;
-	display: inline-block;
-}
-
-#pagemain .pagetitle::after {
-	content: "  • ";
-}
-
-#pagemain .pagesubtitle, #pagemain .postdate {
-	padding-bottom: 7px;
-	margin-left: -4px;
-	display: inline-block;
-}
-
-#pagemain .taglist {
-	--title-height: 1.5em;
-	display: block;
-	height: var(--title-height);
-	transition: height 2s;
-	overflow: hidden;
-	margin-left: 18px;
-	border-left: solid 2px white;
-	padding-left: 1em;
-}
-
-#pagemain .taglist:hover {
-	transition: height 2s;
-	height: auto;
-}
-
-#pagemain .taglist h3::after {
-	content: " ▼";
-}
-
-#pagemain .taglist h3::before {
-}
-
-
-@media(min-width: 00px) and (max-width: 700px) {
-	#pagemain .taglist ul, .tags {
-		columns: auto auto;
-	}
-}
-
-#pagemain .taglist ul li, .tags li {
-	display: inline-block;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	width: auto;
-}
-
-#pagemain .taglist ul li a, .tags li a {
-	margin: 0;
+.sitetitle a {
+	color: inherit;
 	width: 100%;
+	height: 100%;
+	text-align: inherit;
+}
+
+.sitetitle a::before, .sitetitle a::after, .posttitle a::before, .posttitle a::after {
+	content: none;
+}
+
+.navbar ul li {
+	display: block;
+	background-color: var(--color-med-low);
+	color: var(--color-light);
+	margin: 3px 0;
+	padding: 2px;
+	border-bottom: 1px solid var(--color-dark);
+}
+
+	/*
+.pagetitle, .pagesubtitle, .postdate, .postpreview .posttitle, .postpreview .byline, .postpreview .date {
+	background-color: var(--color-med-hi);
+	color: var(--color-light);
+	border: 3px double var(--color-med-low);
+	text-shadow: 2px 2px 0px var(--color-med-low)!important;
+	color: var(--color-med-low);
+	border: 3px dotted var(--color-med-low);
+	padding: 3px;
+	padding-left: 9px;
+	--text-border-color: var(--color-med-low);
+	--text-border-width: 1px;
+	text-shadow: 1px  1px var(--text-border-color),
+				-1px -1px var(--text-border-color),
+				 1px -1px var(--text-border-color),
+				-1px  1px var(--text-border-color);
+	white-space: nowrap;
+	overflow: visable;
+	letter-spacing: auto;
+}
+				*/
+
+.pagetitle, .postpreview .posttitle{
+	border-bottom: none;
+	padding: 6px;
+}
+
+.pagesubtitle, .postpreview .date  {
+	border-top: none;
+	padding: 6px;
+}
+
+.postdate, .postpreview .date {
+	border-top: none;
+	padding: 6px;
+}
+
+.postpreview .byline {
+	border-top: none;
+	border-bottom: none;
+}
+
+.pagecontent, .postpreview .preview {
+	border: 3px dotted var(--color-med-low);
+	border-top: none;
+	margin-bottom: 3px;
+}
+
+.pagecontent p, .pagecontent h2, .pagecontent img {
+	padding: 6px;
+}
+
+.pagecontent.blogsummary {
 	border: none;
-}
-
-#pagemain .taglist ul li a::before, .tags li a::before {
-	content: none;
-}
-
-#pagemain .taglist ul li a::after, .tags li a::after {
-	content: none;
-}
-
-#pagemain .taglist ul li::before, .tags li::before{
-	content: "<";
-}
-
-#pagemain .taglist ul li::after, .tags li::after{
-	content: " /> ";
-	margin-right: 1em;
-}
-
-#pagemain .pagecontent {
-	margin: 0 -3px;
-	padding: 6px;
-	background-color: #36393F;
-	border: solid #202225;
-	border-width: 1px 0;
-/*	box-shadow: inset 0px 0px 6px 2px rgba(0, 0, 0, 0.4);*/
-}
-#pagemain .pagecontent.blogsummary {
-	column-count: 1;
-}
-
-@media(min-width: 700px) {
-	#pagemain .pagecontent.blogsummary {
-		display: flex;
-		column-width: 500;
-		column-count: auto;
-		break-inside: avoid-column;
-	}
-
-}
-
-
-@media(min-width: 00px) and (max-width: 700px) {
-}
-
-#pagemain .pagecontent p {
-	padding: 6px;
 }
 
 .postpreview {
-	display: inline-block;
-	width: calc(100% - 9px - 9px - 9px);
-	background-color: #2F3136;
-	border-radius: 5px;
 	margin: 9px;
-	padding: 5px;
-	padding-left: 9px;
-	box-shadow: inset 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
+	padding: 9px;
+	padding-bottom: 18px;
+	border-bottom: 3px double var(--color-dark);
 }
 
-.tags {
-	margin-top: 6px;
-	border-radius: 5px;
-	padding: 2px;
-	
+.postpreview ul li {
+	list-style: none;
 }
 
-.postpreview .continue h3 {
+.taglist, .postpreview .tags{
+	display: block;
+	padding: 3px;
+	border-bottom: 1px solid var(--color-dark);
+	margin-top: 3px;
+	background-color: var(--color-med-low);
+	color: var(--color-light);
+}
+
+.postpreview .tags {
+	padding: 3px;
+}
+
+.taglist *, .postpreview .tags * {
 	display: inline-block;
-	margin: 2px;
 }
 
-.postpreview .preview-window {
-	background-color: #484B51;
-	border-width: 1px 9px;
-	padding: 4px;
-	padding-left: 6px;
-	margin: 9px 0;
-	border-radius: 5px;
-	box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
+.taglist p, .postpreview .tags p {
+	padding: 0;
 }
 
-.postpreview .continuebutton {
+.postpreview .tags::before {
+	content: "Tags: ";
+}
+
+.taglist p::after, .postpreview .tags p::after {
+	content: ":";
+}
+
+.previouspost, .nextpost {
 	display: inline-block;
-	width: 100%;
-	font-size: 0.8em;
+}
+
+.nextpost {
+	float: right;
+	text-align: right;
 }
 
 .copyright {
-	padding: 5px;
+	text-align: center;
+	padding: 6px;
 }
