--- a/css/main.css
+++ b/css/main.css
@@ -292,111 +292,68 @@ a::after {
     margin: 1px;
 }
 
-@supports(grid-template-columns: 1fr) {
-  /*.sitetitle    { grid-area: stitle; }
-    .sitetagline  { grid-area: stagli; }
-    .navbar       { grid-area: navbar; }
-    .pagetitle    { grid-area: ptitle; }
-    .pagesubtitle { grid-area: psubti; }
-    .pagecontent  { grid-area: pconte; }
-    .copyright    { grid-area: cright; }
-    .themepicker  { grid-area: themep; }*/
-
+@supports(grid-template-areas: "") {
     body {
         display: grid;
-        grid-template-columns: 1fr auto auto auto 1fr 100px auto 1fr 1fr;
-        grid-template-rows: 
-        10vh auto auto 20vh auto auto 20vh auto 50vh auto auto 3vh minmax(85vh, auto) auto auto auto auto;
     }
 
-    .sitetitle {
-        grid-column: 2/5;
-        grid-row: 2/3;
-    }
-    .sitetagline {
-        grid-column: 2/5;
-        grid-row: 3/4;
-    }
-    .pagetitle {
-        grid-column: 4/7;
-        grid-row: 5/6;
-    }
-    .pagesubtitle, .postdate {
-        grid-column: 4/7;
-        grid-row: 6/7;
-    }
-    .navbar {
-        grid-column: 2/6;
-        grid-row: 8/10;
-    }
-    .copyright {
-        grid-column: 1/10;
-        grid-row: 16;
-    }
-    .pagecontent {
-        grid-column: 1/10;
-        grid-row: 13/14;
-        border: 3px dotted var(--color-med-low);
-    }
-    body .tags, .taglist {
-        grid-row: 11;
-        grid-column: 1/14;
-    }
-    .previouspost, .nextpost {
-        grid-row: 15
-    }
-    .previouspost {
-        grid-column: 1/2;
-    }
-    .nextpost {
-        grid-column: 9/10;
-    }
-    .themepicker {
-        grid-column: 1/10;
-        grid-row: 17;
-    }
+    @media(min-width: 700px) {
+        .sitetitle    { grid-area: stitle; }
+        .sitetagline  { grid-area: stagli; }
+        .navbar       { grid-area: navbar; }
+        .pagetitle    { grid-area: ptitle; }
+        .pagesubtitle { grid-area: psubti; }
+        .pagecontent  { grid-area: pconte; }
+        .copyright    { grid-area: cright; }
+        .themepicker  { grid-area: themep; }
 
-    /*.pagecontent.blogsummary {
-        display: grid;
-        min-width: 100%;
-        grid-auto-columns: fit-content(300px);
-        grid-auto-rows: auto;
-    }*/
-    @media (min-width: 800px) {
-        .sitetitle, .sitetagline {
-            grid-column: 2/4;
+        body {
+            grid-template-columns: 2fr 5fr;
+            grid-template-rows: repeat(auto-fill, 30px);
+            grid-template-areas:
+            "stitle navbar navbar"
+            "stitle ptitle ptitle"
+            "stagli psubti psubti"
+            "stagli pconte pconte"
+            "cright pconte pconte"
+            "cright pconte pconte"
+            "------ pconte pconte"
+            "------ pconte pconte"
+            "------ pconte pconte"
+            "themep pconte pconte"
+            ;
+            --margin-title: 6px;
+
         }
-        .pagetitle, .pagesubtitle, .postdate {
-            grid-column: 6/8;
-        }
-        .navbar {
-            grid-column: 3/5;
-        }
+
         .pagecontent {
-            grid-column: 2/9;
+            padding: 3px;
         }
-        .themepicker {
-            grid-column: 1;
-            grid-row: 13;
-            max-width: min-content;
-            overflow: visible;
+
+        .sitetagline {
+            margin-bottom: 3px;
         }
-        .copyright {
-            grid-row: 14;
+
+        .navbar {
+            padding-top: 0;
+            border-top: none;
         }
-        body .tags, .taglist {
-            grid-column: 3/9;
+
+
+        .themepicker li {
+            display: inline-block;
+            width: fit-content;
         }
-        .nextpost, .previouspost {
-            grid-row: 11;
+
+        .themepicker li::after {
+            width: 100%;
+        }
+
+        .navlist li {
+            display: inline-block;
+            width: auto;
         }
 
     }
-
-    .pagecontent {
-        column-span: 5;
-    }
-
-
 
 }
