--- a/css/main.css
+++ b/css/main.css
@@ -7,95 +7,25 @@
     margin: 0;
     text-align: left;
     vertical-align: center;
-    font-family: 'VTFMisterPixelRegular', monospace;
+    font-family: 'Philosopher', sans-serif;
 }
 
 html {
     padding: 0;
     margin: 0;
-    --color-dark: #331e50;
-    --color-med-hi: #d68e49;
-    --color-med-low: #a63725;
-    --color-light: #f7e7c6;
+    --color-dark: black;
+    --color-med-hi: #ef3a0c;
+    --color-med-low: #9b1a0a;
+    --color-light: #efd8a1;
     
     --margin-title: 0px;
 }
 
 body {
     background-color: var(--color-light);
-    color: var(--color-med-low);
+    color: var(--color-light);
     padding: 0;
     margin: 0;
-}
-
-.default {
-    --color-dark: #331e50;
-    --color-med-hi: #d68e49;
-    --color-med-low: #a63725;
-    --color-light: #f7e7c6;
-}
-
-.zelda {
-    --color-dark: #5a3921;
-    --color-med-hi: #7bc67b;
-    --color-med-low: #6b8c42;
-    --color-light: #ffffb5;
-}
-
-.green {
-    --color-dark: #2e463d;
-    --color-med-hi: #577b46;
-    --color-med-low: #385d49;
-    --color-light: #7e8416;
-}
-
-.pokemon {
-    --color-dark: #181010;
-    --color-med-hi: #f7b58c;
-    --color-med-low: #84739c;
-    --color-light: #ffefff;
-}
-
-.pocket {
-    --color-dark: #2b2b26;
-    --color-med-hi: #a89f94;
-    --color-med-low: #706b66;
-    --color-light: #e0dbcd;
-}
-
-.megaman {
-    --color-dark: #102533;
-    --color-med-hi: #6f9edf;
-    --color-med-low: #42678e;
-    --color-light: #cecece;
-}
-
-.metroid {
-    --color-dark: #2c1700;
-    --color-med-low: #b62558;
-    --color-med-hi: #047e60;
-    --color-light: #aedf1e;
-}
-
-.kirby {
-    --color-dark: #2c2c96;
-    --color-med-hi: #e78686;
-    --color-med-low: #7733e7;
-    --color-light: #f7bef7;
-}
-
-.icarus {
-    --color-dark: #1e0000;
-    --color-med-hi: #f78e50;
-    --color-med-low: #9e0000;
-    --color-light: #cef7f7;
-}
-
-.mario {
-    --color-med-dark: #000000;
-    --color-med-hi: #11c600;
-    --color-med-light: #dfa677;
-    --color-light: #eff7b6;
 }
 
 a {
@@ -112,9 +42,7 @@ a::after {
 }
 
 .sitetitle, .sitetagline, .pagetitle, .pagesubtitle, 
-.postdate, .postpreview .posttitle, .postpreview .byline, 
-.postpreview .date  {
-    background-color: var(--color-med-hi);
+.postdate  {
     color: var(--color-light);
     border: 3px double var(--color-med-low);
     text-shadow: 2px 2px 0px var(--color-med-low);
@@ -122,6 +50,10 @@ a::after {
     margin: var(--margin-title);
 
 
+}
+
+.postpreview {
+    border: 3px double var(--color-med-low);
 }
 
 .sitetitle {
@@ -182,7 +114,6 @@ a::after {
                 */
 
 .pagetitle, .postpreview .posttitle{
-    border-bottom: none;
     margin-bottom: 0px;
     padding: 6px;
 }
@@ -207,7 +138,6 @@ a::after {
 }
 
 .pagecontent, .postpreview .preview {
-    border: 3px dotted var(--color-med-low);
     border-top: none;
     margin-bottom: 3px;
 }
@@ -224,7 +154,6 @@ a::after {
     margin: 9px;
     padding: 9px;
     padding-bottom: 18px;
-    border-bottom: 3px double var(--color-dark);
 }
 
 .postpreview ul li {
@@ -282,16 +211,6 @@ a::after {
     display: block;
 }
 
-.themepicker li {
-    display: inline-block;
-    color: var(--color-med-low);
-    background-color: var(--color-light);
-    border: 1px solid var(--color-med-hi);
-    border-bottom: 1px solid var(--color-dark);
-    border-right: 1px solid var(--color-dark);
-    margin: 1px;
-}
-
 @media screen {
 @supports(grid-template-columns: 1fr) {
   /*.sitetitle    { grid-area: stitle; }
@@ -308,25 +227,25 @@ a::after {
     }
 
     body {
-        background-position: right top;
+        background-image: url('/img/dragon.svg');
+        background-position: top;
         background-size: contain;
+        background-repeat: no-repeat;
+        background-color: black;
         display: grid;
-        grid-template-columns: repeat(9, 1fr);
+        grid-template-columns: 1.3fr repeat(3, 1fr) 1.3fr repeat(3, 1fr) 1.3fr;
         grid-template-rows: 
-        repeat(9, 10vh) auto;
+        9vw 10vh 70vh auto;
         border: none;
         margin: none;
         overflow-x: hidden;
     }
-    .sitetagline, .pagesubtitle, .postdate {
-        background: none;
-        color: var(--color-dark);
-        text-shadow: none;
-        text-decoration: var(--color-light);
-    }
 
     .sitetitle, .sitetagline {
-        transform: rotate(-45deg);
+        grid-row: 2;
+        background: none;
+        --size-factor: 1;
+        font-size: calc(var(--size-factor) * 2vw);
     }
     .sitetitle, .sitetagline, .pagetitle, .pagesubtitle, .postdate {
         border: none;
@@ -334,47 +253,53 @@ a::after {
     .sitetitle, .pagetitle {
     }
     .sitetitle {
-        text-align: left;
-        line-height: 55vh;
-        grid-column: 1/10;
-        grid-row: 1/3;
-        width: 50vmax;
-        margin-top: -20vh;
+        text-align: right;
+        vertical-align: middle;
+        grid-column: 2/5;
+        grid-row: 2;
+        background: none;
+        padding-top: 6vw;
+        --size-factor: 3;
     }
     .sitetagline {
-        grid-column: 3/5;
-        padding-left: 10px;
+        grid-column: 6/9;
         text-align: left;
-        grid-row: 3;
-        margin-top: 6vh;
+        padding-top: 7vw;
+        --size-factor: 1.4;
     }
     .pagetitle, .pagesubtitle, .postdate {
-        transform: rotate(45deg);
     }
     .pagetitle {
-        grid-column: 5/10;
-        grid-row: 5/6;
-        padding-top: 6vh;
-        max-width: 110vmin;
+        grid-column: 1/10;
+        grid-row: 10;
+        background: none;
+        font-size: 2em;
     }
     .pagesubtitle, .postdate {
-        grid-column: 6/10;
-        grid-row: 6;
-        padding-left: 8vh;
-        margin-top: 15vh;
+        grid-column: 2/10;
+        grid-row: 11;
+        background: none;
     }
     .navbar {
-        grid-column: 3/6;
-        grid-row: 6/9;
-        writing-mode: vertical-lr;
+        grid-column: 3/10;
+        grid-row: 8/13;
+        writing-mode: vertical-rl;
+        background: none;
+        z-index: 10000;
+    }
+    .navbar ul {
+        background: none;
+    }
+    .navbar ul li {
+        background: none;
     }
     .copyright {
         grid-column: 3/8;
-        grid-row: 16;
+        grid-row: 17;
     }
     .pagecontent {
         grid-column: 1/10;
-        grid-row: 11/14;
+        grid-row: 13/14;
         /* border: 3px dotted var(--color-med-low); */
         border: none;
         column-width: 400px;
@@ -386,9 +311,9 @@ a::after {
         break-inside: avoid;
     }
     body .tags, .taglist {
-        grid-row: 10;
+        grid-row: 16;
         grid-column: 1/8;
-        margin-bottom: 2vmin;
+        background: none;
     }
     .previouspost, .nextpost {
         grid-row: 15
@@ -403,6 +328,7 @@ a::after {
         grid-column: 1/10;
         grid-row: 17;
     }
+
 
     .pagecontent.blogsummary {
         display: grid;
