--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,8 @@ body {
     bottom: 0;
     right: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: -10;
 }
 h1, h2, h3, h4, h5 {
