--- a/css/main.css
+++ b/css/main.css
@@ -15,13 +15,13 @@ body {
     font-size: 18px;
 }
 #maskcanvas {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     right: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     z-index: -10;
 }
 h1, h2, h3, h4, h5 {
